Fix T94805: Library weak reference generates "path not found" reports.

No reason to handle those paths here, those are fully internal temp
data, user should not be exposed to it currently.